--- a/pom.xml
+++ b/pom.xml
@@ -56,8 +56,15 @@
 			<version>8.0.25</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>4.4.0</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -78,6 +85,6 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 
 </project>
